{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 41,
  "lineage": "22581daa-36df-b48a-efc1-b9c478dbf14d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:678406063789:security-group/sg-00316753dd81aaede",
            "description": "Allow HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00316753dd81aaede",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg1",
            "name_prefix": "",
            "owner_id": "678406063789",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg1"
            },
            "tags_all": {
              "Name": "sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf690b4f84e24516"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:678406063789:security-group/sg-0c29f5822fd9b8b19",
            "description": "Allow HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c29f5822fd9b8b19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg2",
            "name_prefix": "",
            "owner_id": "678406063789",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg2"
            },
            "tags_all": {
              "Name": "sg2"
            },
            "timeouts": null,
            "vpc_id": "vpc-013d2a590c774586e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:678406063789:vpc/vpc-013d2a590c774586e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f05ee93f758bbfa",
            "default_route_table_id": "rtb-0d29f308c81c616b5",
            "default_security_group_id": "sg-00fa2d81bbfc6d783",
            "dhcp_options_id": "dopt-03330cb5a202e6253",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-013d2a590c774586e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d29f308c81c616b5",
            "owner_id": "678406063789"
          },
          "dependencies": [
            "aws_security_group.sg1"
          ]
        }
      ]
    }
  ]
}